# GuiPlug

./: .gitignore  README.md  main.cpp  meson.build
imgui/: README.md
include/: AssetsManager.h  Enums.h  Enums.hpp  FileManager.h  FileManager.hpp  GuiPlugApp.h  GuiPlugApp.hpp  HelperFunctions.hpp  MainWindow.h  MainWindow.hpp  ManagerWindow.h  ManagerWindow.hpp  PlatformWindow.h  PlatformWindow.hpp  Plugin.hpp  Project.h  Project.hpp  SkiaHandler.h  SkiaHandler.hpp  WizardWindow.h  WizardWindow.hpp
include/fonts/: IconsForkAwesome.hpp
lib/: portable-file-dialogs.h
src/: FileManager.cpp  GuiPlugApp.cpp  MainWindow.cpp  ManagerWindow.cpp  PlatformWindow.cpp  Plugin.cpp  Project.cpp  SkiaHandler.cpp  WizardWindow.cpp
